test avoid focus centering input on IOS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,11 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100% }
+html, body {
+  height: 100%;
+  -webkit-overflow-scrolling : touch !important;
+  overflow: auto !important;
+}
 
 html {
   scroll-behavior: smooth;
